[package]
name = "scheduler"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8"
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "compression-gzip", "trace"] }
tokio = { version = "1", features = ["full"] }
rusqlite = { version = "0.40", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
cron = "0.16"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4", "serde"] }
clap = { version = "4", features = ["derive", "env"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
anyhow = "1"
rust-embed = "8"
reqwest = { version = "0.13", features = ["json"] }
mime_guess = "2"
toml = "1"
